@@ -6,7 +6,7 @@ XHTML_STYLESHEET=xsl/xhtml.xsl
 CHUNK_XHTML_STYLESHEET=xsl/xhtml-chunk.xsl
 STYLESHEETS=$(CHUNK_XHTML_STYLESHEET) xsl/xhtml-common.xsl
 
-generated_mans = oprofiled.1 op_start.1 op_stop.1 op_help.1 oprofpp.1 op_time.1 op_to_source.1 op_merge.1 opcontrol.1
+generated_mans = oprofiled.1 op_help.1 oprofpp.1 op_time.1 op_to_source.1 op_merge.1 opcontrol.1
 
 man_MANS = oprofile.1 $(generated_mans)
 
